Fix: expand container to make inner elements visible

--- a/frontend/src/widgets/Settings/ui/Settings.module.scss
+++ b/frontend/src/widgets/Settings/ui/Settings.module.scss
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 0 10px;
+  padding: 0 10px 100px 10px;
+
 }
 
 @media (max-width: 1200px) {
